source/Modern.Vice.PdbMonitor/Compilers/Modern.Vice.PdbMonitor.Compilers.Acme/Grammar/.antlr/AcmeParser.java
// Generated from d:\Git\Righthand\C64\modern-vice-pdb-monitor\source\Modern.Vice.PdbMonitor\Compilers\Modern.Vice.PdbMonitor.Compilers.Acme\Grammar\Acme.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AcmeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, UNTIL=61, WHILE=62, BYTE_VALUES_OP=63, WORD_VALUES_OP=64, BE_WORD_VALUES_OP=65, 
		THREE_BYTES_VALUES_OP=66, BE_THREE_BYTES_VALUES_OP=67, QUAD_VALUES_OP=68, 
		BE_QUAD_VALUES_OP=69, HEX=70, FILL=71, SKIP_VALUES=72, ALIGN=73, CONVERSION_TABLE=74, 
		TEXT=75, SCRXOR=76, TO=77, SOURCE=78, BINARY=79, ZONE=80, SYMBOLLIST=81, 
		CONVERSION_KEYWORD=82, FILEFORMAT=83, DEC_NUMBER=84, HEX_NUMBER=85, BIN_NUMBER=86, 
		CHAR=87, STRING=88, LIB_FILENAME=89, XOR=90, OR=91, ADC=92, AND=93, ASL=94, 
		BCC=95, BCS=96, BEQ=97, BIT=98, BMI=99, BNE=100, BPL=101, BRA=102, BRK=103, 
		BVC=104, BVS=105, CLC=106, CLD=107, CLI=108, CLV=109, CMP=110, CPX=111, 
		CPY=112, DEC=113, DEX=114, DEY=115, EOR=116, INC=117, INX=118, INY=119, 
		JMP=120, JSR=121, LDA=122, LDY=123, LDX=124, LSR=125, NOP=126, ORA=127, 
		PHA=128, PHX=129, PHY=130, PHP=131, PLA=132, PLP=133, PLY=134, ROL=135, 
		ROR=136, RTI=137, RTS=138, SBC=139, SEC=140, SED=141, SEI=142, STA=143, 
		STX=144, STY=145, STZ=146, TAX=147, TAY=148, TSX=149, TXA=150, TXS=151, 
		TYA=152, SYMBOL=153, COMMENT=154, EOL=155, WS=156;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_pseudoOps = 2, RULE_expressionPseudoOps = 3, 
		RULE_hexByteValues = 4, RULE_fillValues = 5, RULE_skipValues = 6, RULE_alignValues = 7, 
		RULE_convtab = 8, RULE_stringValues = 9, RULE_scrxor = 10, RULE_to = 11, 
		RULE_source = 12, RULE_binary = 13, RULE_zone = 14, RULE_symbollist = 15, 
		RULE_flowOps = 16, RULE_ifFlow = 17, RULE_ifDefFlow = 18, RULE_forFlow = 19, 
		RULE_set = 20, RULE_doFlow = 21, RULE_whileFlow = 22, RULE_endOfFile = 23, 
		RULE_reportError = 24, RULE_errorLevel = 25, RULE_macroTitle = 26, RULE_macro = 27, 
		RULE_callMarco = 28, RULE_callMacroArgument = 29, RULE_setProgramCounter = 30, 
		RULE_initMem = 31, RULE_xor = 32, RULE_pseudoPc = 33, RULE_cpu = 34, RULE_assume = 35, 
		RULE_address = 36, RULE_expressionPseudoCodes = 37, RULE_block = 38, RULE_statement = 39, 
		RULE_statements = 40, RULE_filename = 41, RULE_condition = 42, RULE_comment = 43, 
		RULE_label = 44, RULE_instruction = 45, RULE_argumentList = 46, RULE_argument = 47, 
		RULE_expression = 48, RULE_number = 49, RULE_decNumber = 50, RULE_hexNumber = 51, 
		RULE_binNumber = 52, RULE_logicalop = 53, RULE_symbol = 54, RULE_binaryop = 55, 
		RULE_opcode = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "pseudoOps", "expressionPseudoOps", "hexByteValues", 
			"fillValues", "skipValues", "alignValues", "convtab", "stringValues", 
			"scrxor", "to", "source", "binary", "zone", "symbollist", "flowOps", 
			"ifFlow", "ifDefFlow", "forFlow", "set", "doFlow", "whileFlow", "endOfFile", 
			"reportError", "errorLevel", "macroTitle", "macro", "callMarco", "callMacroArgument", 
			"setProgramCounter", "initMem", "xor", "pseudoPc", "cpu", "assume", "address", 
			"expressionPseudoCodes", "block", "statement", "statements", "filename", 
			"condition", "comment", "label", "instruction", "argumentList", "argument", 
			"expression", "number", "decNumber", "hexNumber", "binNumber", "logicalop", 
			"symbol", "binaryop", "opcode"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'!'", "'if'", "'else'", "'ifdef'", "'ifndef'", "'for'", 
			"'in'", "'!set'", "'='", "'!do'", "'!endoffile'", "'!eof'", "'!warn'", 
			"'!error'", "'!serious'", "'!macro'", "'~'", "'+'", "'*'", "'overlay'", 
			"'invisible'", "'!initmem'", "'!xor'", "'!pseudopc'", "'!cpu'", "'6502'", 
			"'nmos6502'", "'6510'", "'65c02'", "'r65c02'", "'w65c02'", "'65816'", 
			"'65ce02'", "'4502'", "'m65'", "'c64dtv2'", "'!al'", "'!as'", "'!rl'", 
			"'!rs'", "'!address'", "'!addr'", "'{'", "'}'", "'-'", "'#'", "'('", 
			"')'", "'/'", "'>'", "'<'", "'=='", "'<='", "'>='", "'&'", "'|'", "'^'", 
			"'<<'", "'>>'", "'until'", "'while'", null, null, "'!be16'", null, "'!be24'", 
			null, "'!be32'", null, null, "'!skip'", "'!align'", null, null, "'!scrxor'", 
			"'!to'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "UNTIL", "WHILE", "BYTE_VALUES_OP", "WORD_VALUES_OP", "BE_WORD_VALUES_OP", 
			"THREE_BYTES_VALUES_OP", "BE_THREE_BYTES_VALUES_OP", "QUAD_VALUES_OP", 
			"BE_QUAD_VALUES_OP", "HEX", "FILL", "SKIP_VALUES", "ALIGN", "CONVERSION_TABLE", 
			"TEXT", "SCRXOR", "TO", "SOURCE", "BINARY", "ZONE", "SYMBOLLIST", "CONVERSION_KEYWORD", 
			"FILEFORMAT", "DEC_NUMBER", "HEX_NUMBER", "BIN_NUMBER", "CHAR", "STRING", 
			"LIB_FILENAME", "XOR", "OR", "ADC", "AND", "ASL", "BCC", "BCS", "BEQ", 
			"BIT", "BMI", "BNE", "BPL", "BRA", "BRK", "BVC", "BVS", "CLC", "CLD", 
			"CLI", "CLV", "CMP", "CPX", "CPY", "DEC", "DEX", "DEY", "EOR", "INC", 
			"INX", "INY", "JMP", "JSR", "LDA", "LDY", "LDX", "LSR", "NOP", "ORA", 
			"PHA", "PHX", "PHY", "PHP", "PLA", "PLP", "PLY", "ROL", "ROR", "RTI", 
			"RTS", "SBC", "SEC", "SED", "SEI", "STA", "STX", "STY", "STZ", "TAX", 
			"TAY", "TSX", "TXA", "TXS", "TYA", "SYMBOL", "COMMENT", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Acme.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AcmeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				line();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & ((1L << (T__18 - 19)) | (1L << (T__19 - 19)) | (1L << (T__45 - 19)) | (1L << (BYTE_VALUES_OP - 19)) | (1L << (WORD_VALUES_OP - 19)) | (1L << (BE_WORD_VALUES_OP - 19)) | (1L << (THREE_BYTES_VALUES_OP - 19)) | (1L << (BE_THREE_BYTES_VALUES_OP - 19)) | (1L << (QUAD_VALUES_OP - 19)) | (1L << (BE_QUAD_VALUES_OP - 19)))) != 0) || ((((_la - 92)) & ~0x3f) == 0 && ((1L << (_la - 92)) & ((1L << (ADC - 92)) | (1L << (AND - 92)) | (1L << (ASL - 92)) | (1L << (BCC - 92)) | (1L << (BCS - 92)) | (1L << (BEQ - 92)) | (1L << (BIT - 92)) | (1L << (BMI - 92)) | (1L << (BNE - 92)) | (1L << (BPL - 92)) | (1L << (BRA - 92)) | (1L << (BRK - 92)) | (1L << (BVC - 92)) | (1L << (BVS - 92)) | (1L << (CLC - 92)) | (1L << (CLD - 92)) | (1L << (CLI - 92)) | (1L << (CLV - 92)) | (1L << (CMP - 92)) | (1L << (CPX - 92)) | (1L << (CPY - 92)) | (1L << (DEC - 92)) | (1L << (DEX - 92)) | (1L << (DEY - 92)) | (1L << (EOR - 92)) | (1L << (INC - 92)) | (1L << (INX - 92)) | (1L << (INY - 92)) | (1L << (JMP - 92)) | (1L << (JSR - 92)) | (1L << (LDA - 92)) | (1L << (LDY - 92)) | (1L << (LDX - 92)) | (1L << (LSR - 92)) | (1L << (NOP - 92)) | (1L << (ORA - 92)) | (1L << (PHA - 92)) | (1L << (PHX - 92)) | (1L << (PHY - 92)) | (1L << (PHP - 92)) | (1L << (PLA - 92)) | (1L << (PLP - 92)) | (1L << (PLY - 92)) | (1L << (ROL - 92)) | (1L << (ROR - 92)) | (1L << (RTI - 92)) | (1L << (RTS - 92)) | (1L << (SBC - 92)) | (1L << (SEC - 92)) | (1L << (SED - 92)) | (1L << (SEI - 92)) | (1L << (STA - 92)) | (1L << (STX - 92)) | (1L << (STY - 92)) | (1L << (STZ - 92)) | (1L << (TAX - 92)) | (1L << (TAY - 92)) | (1L << (TSX - 92)) | (1L << (TXA - 92)) | (1L << (TXS - 92)) | (1L << (TYA - 92)) | (1L << (SYMBOL - 92)) | (1L << (COMMENT - 92)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public TerminalNode EOL() { return getToken(AcmeParser.EOL, 0); }
		public ExpressionPseudoOpsContext expressionPseudoOps() {
			return getRuleContext(ExpressionPseudoOpsContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(119);
				expressionPseudoOps();
				}
				break;
			case 2:
				{
				setState(120);
				instruction();
				}
				break;
			case 3:
				{
				setState(121);
				label();
				}
				break;
			case 4:
				{
				setState(122);
				comment();
				}
				break;
			}
			setState(125);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PseudoOpsContext extends ParserRuleContext {
		public ExpressionPseudoOpsContext expressionPseudoOps() {
			return getRuleContext(ExpressionPseudoOpsContext.class,0);
		}
		public HexByteValuesContext hexByteValues() {
			return getRuleContext(HexByteValuesContext.class,0);
		}
		public FillValuesContext fillValues() {
			return getRuleContext(FillValuesContext.class,0);
		}
		public SkipValuesContext skipValues() {
			return getRuleContext(SkipValuesContext.class,0);
		}
		public AlignValuesContext alignValues() {
			return getRuleContext(AlignValuesContext.class,0);
		}
		public ConvtabContext convtab() {
			return getRuleContext(ConvtabContext.class,0);
		}
		public StringValuesContext stringValues() {
			return getRuleContext(StringValuesContext.class,0);
		}
		public ScrxorContext scrxor() {
			return getRuleContext(ScrxorContext.class,0);
		}
		public ToContext to() {
			return getRuleContext(ToContext.class,0);
		}
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public BinaryContext binary() {
			return getRuleContext(BinaryContext.class,0);
		}
		public ZoneContext zone() {
			return getRuleContext(ZoneContext.class,0);
		}
		public SymbollistContext symbollist() {
			return getRuleContext(SymbollistContext.class,0);
		}
		public IfFlowContext ifFlow() {
			return getRuleContext(IfFlowContext.class,0);
		}
		public IfDefFlowContext ifDefFlow() {
			return getRuleContext(IfDefFlowContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public DoFlowContext doFlow() {
			return getRuleContext(DoFlowContext.class,0);
		}
		public WhileFlowContext whileFlow() {
			return getRuleContext(WhileFlowContext.class,0);
		}
		public EndOfFileContext endOfFile() {
			return getRuleContext(EndOfFileContext.class,0);
		}
		public ReportErrorContext reportError() {
			return getRuleContext(ReportErrorContext.class,0);
		}
		public CallMarcoContext callMarco() {
			return getRuleContext(CallMarcoContext.class,0);
		}
		public SetProgramCounterContext setProgramCounter() {
			return getRuleContext(SetProgramCounterContext.class,0);
		}
		public InitMemContext initMem() {
			return getRuleContext(InitMemContext.class,0);
		}
		public XorContext xor() {
			return getRuleContext(XorContext.class,0);
		}
		public PseudoPcContext pseudoPc() {
			return getRuleContext(PseudoPcContext.class,0);
		}
		public CpuContext cpu() {
			return getRuleContext(CpuContext.class,0);
		}
		public AssumeContext assume() {
			return getRuleContext(AssumeContext.class,0);
		}
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public PseudoOpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pseudoOps; }
	}

	public final PseudoOpsContext pseudoOps() throws RecognitionException {
		PseudoOpsContext _localctx = new PseudoOpsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pseudoOps);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BYTE_VALUES_OP:
			case WORD_VALUES_OP:
			case BE_WORD_VALUES_OP:
			case THREE_BYTES_VALUES_OP:
			case BE_THREE_BYTES_VALUES_OP:
			case QUAD_VALUES_OP:
			case BE_QUAD_VALUES_OP:
				{
				setState(127);
				expressionPseudoOps();
				}
				break;
			case HEX:
				{
				setState(128);
				hexByteValues();
				}
				break;
			case FILL:
				{
				setState(129);
				fillValues();
				}
				break;
			case SKIP_VALUES:
				{
				setState(130);
				skipValues();
				}
				break;
			case ALIGN:
				{
				setState(131);
				alignValues();
				}
				break;
			case CONVERSION_TABLE:
				{
				setState(132);
				convtab();
				}
				break;
			case TEXT:
			case CONVERSION_KEYWORD:
				{
				setState(133);
				stringValues();
				}
				break;
			case SCRXOR:
				{
				setState(134);
				scrxor();
				}
				break;
			case TO:
				{
				setState(135);
				to();
				}
				break;
			case SOURCE:
				{
				setState(136);
				source();
				}
				break;
			case BINARY:
				{
				setState(137);
				binary();
				}
				break;
			case ZONE:
				{
				setState(138);
				zone();
				}
				break;
			case SYMBOLLIST:
				{
				setState(139);
				symbollist();
				}
				break;
			case T__2:
				{
				setState(140);
				ifFlow();
				}
				break;
			case T__4:
			case T__5:
				{
				setState(141);
				ifDefFlow();
				}
				break;
			case T__8:
				{
				setState(142);
				set();
				}
				break;
			case T__10:
				{
				setState(143);
				doFlow();
				}
				break;
			case T__1:
				{
				setState(144);
				whileFlow();
				}
				break;
			case T__11:
			case T__12:
				{
				setState(145);
				endOfFile();
				}
				break;
			case T__13:
			case T__14:
			case T__15:
				{
				setState(146);
				reportError();
				}
				break;
			case T__18:
				{
				setState(147);
				callMarco();
				}
				break;
			case T__19:
				{
				setState(148);
				setProgramCounter();
				}
				break;
			case T__22:
				{
				setState(149);
				initMem();
				}
				break;
			case T__23:
				{
				setState(150);
				xor();
				}
				break;
			case T__24:
				{
				setState(151);
				pseudoPc();
				}
				break;
			case T__25:
				{
				setState(152);
				cpu();
				}
				break;
			case T__37:
			case T__38:
			case T__39:
			case T__40:
				{
				setState(153);
				assume();
				}
				break;
			case T__41:
			case T__42:
				{
				setState(154);
				address();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionPseudoOpsContext extends ParserRuleContext {
		public ExpressionPseudoCodesContext expressionPseudoCodes() {
			return getRuleContext(ExpressionPseudoCodesContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionPseudoOpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionPseudoOps; }
	}

	public final ExpressionPseudoOpsContext expressionPseudoOps() throws RecognitionException {
		ExpressionPseudoOpsContext _localctx = new ExpressionPseudoOpsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expressionPseudoOps);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			expressionPseudoCodes();
			setState(158);
			expression(0);
			setState(163);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(159);
					match(T__0);
					setState(160);
					expression(0);
					}
					} 
				}
				setState(165);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
